# rust-discord-bot

./: .env.example  .gitignore  Cargo.toml
src/: bot.rs  config.rs  event_handler.rs  hash_string.rs  main.rs
src/commands/: ban.rs  mod.rs
