[package]
name = "rust-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = { version = "0.11", default-features = false, features = [
#     "rustls-tls-native-roots",
#     "json",
# ] }
async-trait = "0.1"
clap = "4.4"
dotenvy = "0.15"
error-stack = { version = "0.4", features = ["spantrace"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono"] }
serenity = { version = "0.12", default-features = false, features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "model",
    "rustls_backend",
    "utils",
] }
